[workspace]
members = [
    "ports/servo",
    "tests/unit/*",

    "ports/geckolib",
    "ports/geckolib/tests",
]
default-members = [
    "ports/servo",
    "tests/unit/*",
]
exclude = [".cargo"]

[profile.release]
opt-level = 3
# Uncomment to profile on Linux:
# debug = true
# lto = false

[patch.crates-io]
# If you need to temporarily test Servo with a local fork of some upstream
# crate, add that here. Use the form:
#
#     <crate> = { path = "/path/to/local/checkout" }
#
# Or for a git dependency:
#
#     [patch."https://github.com/servo/<repository>"]
#     <crate> = { path = "/path/to/local/checkout" }
cgl = {git = "https://github.com/servo/cgl-rs", branch = "gleam"}
gleam = {git = "https://github.com/servo/gleam", branch = "safety"}
io-surface = {git = "https://github.com/servo/io-surface-rs", branch = "gleam"}
offscreen_gl_context = {git = "https://github.com/nox/rust-offscreen-rendering-context", branch = "gleam"}
servo-skia = {git = "https://github.com/servo/skia", branch = "gleam"}

[patch."https://github.com/servo/rust-azure"]
azure = {git = "https://github.com/servo/rust-azure.git", branch = "skia"}

[patch."https://github.com/servo/webrender"]
webrender = {git = "https://github.com/servo/webrender.git", branch = "gleam"}
webrender_api = {git = "https://github.com/servo/webrender.git", branch = "gleam"}
